--- a/src/videoplayer.scss
+++ b/src/videoplayer.scss
@@ -99,7 +99,8 @@ $slider-fill:#fff;
       z-index: 1;
     }
     .progress-buffered{
-      background: rgba(255,255,255,0.4);
+      //background: rgba(255,255,255,0.4);
+      background: red;
       height: 100%;
       position: absolute;
       top:0px;
@@ -121,7 +122,7 @@ $slider-fill:#fff;
         background: rgba(0, 0, 0, 0.7);
         width: 20px;
         height: 100%;
-        top: 0px;
+        top: 1px;
         position: absolute;
       }
       .volume-wrapper{
