bufferbar fix, now buffer which close to currentTime will shown instead of last buffer from video.buffered

--- a/src/videoplayer.scss
+++ b/src/videoplayer.scss
@@ -106,6 +106,10 @@ $slider-fill:#fff;
       top:0px;
     }
 
+    .time-box{
+      padding-left: 0;
+    }
+
     .volume-control {
       position: relative;
     }
