--- a/src/videoplayer.scss
+++ b/src/videoplayer.scss
@@ -99,8 +99,7 @@ $slider-fill:#fff;
       z-index: 1;
     }
     .progress-buffered{
-      //background: rgba(255,255,255,0.4);
-      background: red;
+      background: rgba(255,255,255,0.4);
       height: 100%;
       position: absolute;
       top:0px;
@@ -116,7 +115,7 @@ $slider-fill:#fff;
     .volume-slider {
       cursor: pointer;
       position: absolute;
-      top: -180px;
+      top: -171px;
       padding-top: 5px;
       height: 165px;
       width: 20px;
@@ -145,19 +144,10 @@ $slider-fill:#fff;
         left: 0px;
       }
     }
-    .playback-rate-slider {
-      position: absolute;
-      height: 150px;
-      top: -150px;
-      width: 20px;
-      background: gray;
-      .playback-rate {
-        width: 8px;
-        background: red;
-        bottom: 0px;
-        position: absolute;
-      }
+    .volume-button{
+      margin-top: 8.5px;
     }
+
 
   }
   .display-flex {
